[tool.poetry]
name = "hash_chunker"
homepage = "https://github.com/whysage/hash_chunker"
repository = "https://github.com/whysage/hash_chunker"
version = "0.1.7"
description = "Generator that yields hash chunks for distributed data processing."
authors = ["Volodymyr Kochetkov <whysages@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "hash_chunker"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/whysage/hash_chunker/issues"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^2.12.0"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.942"
pylint = "^2.13.7"
isort = "^5.10.1"
pre-commit = "^2.16.0"
autoflake = "^1.4"
black = "^22.3.0"


[tool.black]
line-length = 88

[tool.isort]
profile = "wemake"
line_length = 88

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
follow_imports = "skip"
warn_return_any = true
warn_unused_configs = true

[tool.pylint.'MESSAGES CONTROL']
disable = "R0205,R0903,W1203"

[tool.pylint.SIMILARITIES]
ignore-imports = true
ignore-signatures = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
